// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor does not render unknown variants classes 1`] = `
<a
  className="btn"
  data-testid="button-link"
  onClick={[Function]}
/>
`;

exports[`Anchor element renders correctly 1`] = `
<a
  className="btn btn-primary"
  data-testid="button-link"
  onClick={[Function]}
/>
`;

exports[`Anchor renders with additional class correctly 1`] = `
<a
  className="btn btn-primary whatever-anchor"
  data-testid="button-link"
  onClick={[Function]}
/>
`;

exports[`Anchor with text inside renders correctly 1`] = `
<a
  className="btn btn-primary"
  data-testid="button-link"
  onClick={[Function]}
>
  VÍCE
</a>
`;

exports[`Anchors with variants render correctly 1`] = `
Array [
  <a
    className="btn btn-primary"
    data-testid="button-link"
    onClick={[Function]}
  />,
  <a
    className="btn btn-outline-primary"
    data-testid="button-link"
    onClick={[Function]}
  />,
  <a
    className="btn btn-secondary"
    data-testid="button-link"
    onClick={[Function]}
  />,
  <a
    className="btn btn-outline-dark text-black"
    data-testid="button-link"
    onClick={[Function]}
  />,
  <a
    className="btnSmallBlack"
    data-testid="button-link"
    onClick={[Function]}
  />,
]
`;

exports[`Button does not render unknown variants classes 1`] = `
<button
  className="btn"
  type="button"
/>
`;

exports[`Button renders HTML button element (not anchor element) 1`] = `
Array [
  <button
    className="btn btn-primary"
    type="button"
  />,
  <a
    className="btn btn-primary"
    data-testid="button-link"
    onClick={[Function]}
  />,
]
`;

exports[`Button renders with additional class correctly 1`] = `
<button
  className="btn btn-primary whatever-button"
  type="button"
/>
`;

exports[`Button with disabled state renders correctly  1`] = `
<button
  className="btn btn-primary"
  disabled={true}
  type="button"
/>
`;

exports[`Button with icon renders correctly 1`] = `
<button
  className="btn btn-primary"
  type="button"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
    />
  </svg>
</button>
`;

exports[`Button with onClick renders correctly 1`] = `
<button
  className="btn btn-primary"
  onClick={[Function]}
  type="button"
/>
`;

exports[`Button with text renders correctly 1`] = `
<button
  className="btn btn-primary"
  type="button"
>
  VÍCE
</button>
`;

exports[`Buttons with variants render correctly 1`] = `
Array [
  <button
    className="btn btn-primary"
    type="button"
  />,
  <button
    className="btn btn-outline-primary"
    type="button"
  />,
  <button
    className="btn btn-secondary"
    type="button"
  />,
  <button
    className="btn btn-outline-dark text-black"
    type="button"
  />,
  <button
    className="btnSmallBlack"
    type="button"
  />,
]
`;
